--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,7 +12,7 @@
     />
     <title>Foco TCC</title>
   </head>
-  <body class="font-OpenSans">
+  <body class="font-OpenSans scrollbar-hide">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
